tests/snapshots/scripts_sanitized/Admin API Tool/Database Server - ID 12/Enable_Disable Server Additional Database Folder Setting - ID 121.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Enable/Disable Server Additional Database Folder Setting
#  HISTORY:
     - Created:   2020-01-19 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2020-00-00 

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/config/additionaldbfolder" ]
Variable setzen [ $json ; JSONSetElement ( ""
				 ; [ "UseOtherDatabaseRoot"; FMS__fmserver::UseOtherDatabaseRoot ; JSONBoolean ]
				 ; [ "DatabaseRootPath"; FMS__fmserver::DatabaseRootPath ; JSONString ]
				 ; [ "UseDatabaseRoot1_RC"; FMS__fmserver::UseDatabaseRoot1_RC ; JSONBoolean ]
				 ; [ "DatabaseRootPath1_RC"; FMS__fmserver::DatabaseRootPath1_RC ; JSONString ]
				 ; [ "backupDatabaseRoot1_RC"; FMS__fmserver::backupDatabaseRoot1_RC ; JSONBoolean ]
				 ) ]

Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::incrementalBackupEnabled ; JSONGetElement ( $$my.result ; "response.incrementalBackupEnabled" ) ]
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
